# linear-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  linear-chief.service  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_integration.py
docs/: ENGAGEMENT_TRACKER_IMPLEMENTATION.md  api.md  architecture.md  backup-strategy.md  brief.md  deployment.md  filtering-strategy.md  implementation-token-logging.md  logging.md  phase2-preference-learning.md  phase_2.4_implementation_report.md  prd.md  press-release.md  progress.md  roadmap.md  telegram_bot_modes.md  token-usage-logging.md  troubleshooting.md  week1-spike-validation-checklist.md
docs/architecture/: checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  metrics-logging.md  next-steps.md  security.md  source-tree.md  tech-stack.md  telegram-setup.md  test-strategy-and-standards.md
docs/examples/: token-logging-comparison.md
docs/prd/: checklist-results-report.md  epic-1-foundation-agent-sdk-validation-spike.md  epic-2-production-ready-morning-digest.md  epic-3-intelligence-optimization.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  (+1 more)
examples/: README.md  interactive_bot_example.py  preference_learning_demo.py
scripts/: README.md  backup-database-only.sh  backup-linear-chief.sh  check-backups.sh  restore-from-backup.sh  setup_db.py  test_semantic_search.py
tests/: README.md  __init__.py  test_smoke.py
(+87 files in other folders)
