[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-chief"
version = "0.1.0"
description = "Intelligent Linear monitoring agent with AI-powered briefings"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Petr Padák"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic==0.39.0",
    "mem0ai==0.1.19",
    "qdrant-client==1.9.1",
    "openai==1.54.0",
    "chromadb==0.4.24",
    "chroma-hnswlib==0.7.3",
    "sentence-transformers==3.0.1",
    "httpx==0.26.0",
    "python-telegram-bot==20.8",
    "sqlalchemy==2.0.34",
    "python-decouple==3.8",
    "apscheduler==3.10.4",
    "pytz==2024.1",
    "tenacity==9.0.0",
    "python-json-logger==2.0.7",
    "rich==13.7.1",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "typing-extensions==4.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.15.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
